[gd_scene load_steps=4 format=3 uid="uid://du5su0iys7f7u"]

[ext_resource type="Script" path="res://items/FoodSpawner.gd" id="1_8br0i"]
[ext_resource type="PackedScene" uid="uid://cesj4svb8hyvi" path="res://items/Food.tscn" id="2_vi2cy"]
[ext_resource type="Texture2D" uid="uid://dxemyucu6uwpq" path="res://materials/FoodBar/FoodBar_100%.png" id="3_76v75"]

[node name="FoodSpawner" type="Node3D"]
script = ExtResource("1_8br0i")
food_scene = ExtResource("2_vi2cy")

[node name="spawn_blocker" type="VisibleOnScreenNotifier3D" parent="."]

[node name="spawn_timer" type="Timer" parent="."]

[node name="icon" type="Sprite3D" parent="."]
billboard = 2
texture = ExtResource("3_76v75")

[connection signal="screen_entered" from="spawn_blocker" to="." method="_on_spawn_blocker_screen_entered"]
[connection signal="screen_exited" from="spawn_blocker" to="." method="_on_spawn_blocker_screen_exited"]
[connection signal="timeout" from="spawn_timer" to="." method="_on_spawn_timer_timeout"]
